Add constants and improve logging in AuthClient
Introduces AuthConstants for header and MIME type management, refactors AuthClient to use these constants, and adds SLF4J-based logging for key authentication events and errors. Also updates README files for core modules and improves builder patterns and documentation in DTOs.